@@ -1,6 +1,7 @@
 49.alpha - DEVEL
 ==========================
 
+- Let the grid be unselected by pressing escape or clicking outside
 - Update tab and ctrl+keys to cycle through cells linearly (#5)
 - Update earmark highlighting to the new accent color palette
 - Add strike-through for earmark warnings
@@ -9,6 +10,7 @@
 
 48.0 - March 14, 2025
 ==========================
+
 - Let the about dialog track appdata releases
 - Updated translations:
   Jordi Mas (ca); Jiri Grönroos (fi); Balázs Úr (hu).
